feat: add first card fix: style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
     <main class="main-block">
         <div class="container">
-            <div class="card debug"></div>
+            <div class="card debug">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <span>&phone;;</span>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
         </div>
     </main>
     <footer class="fixed">
