--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <title>BoZoom</title>
 </head>
+
 <body>
     <main class="main-block">
         <div class="container">
             <div class="card debug">
                 <img src="https://picsum.photos/250/200" alt="foto random">
                 <div class="micro">
-                    <span>&phone;;</span>
+                    <i class="fa-solid fa-microphone-slash"></i>
                     <span>Pinco Pallo</span>
                 </div>
             </div>
@@ -24,4 +29,5 @@
         <div class="iContainer"></div>
     </footer>
 </body>
+
 </html>
