feat: add footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,246 @@
 <body>
     <main class="main-block">
         <div class="container">
-            <div class="card debug">
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/250/200" alt="foto random">
+                <div class="micro">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="card">
                 <img src="https://picsum.photos/250/200" alt="foto random">
                 <div class="micro">
                     <i class="fa-solid fa-microphone-slash"></i>
@@ -23,10 +262,22 @@
             </div>
         </div>
     </main>
-    <footer class="fixed">
-        <div class="iContainer"></div>
-        <div class="iContainer"></div>
-        <div class="iContainer"></div>
+    <footer class="fixed flex">
+        <div class="flex iContainer">
+            <div class="first-icon debug"></div>
+            <div class="first-icon debug"></div>
+        </div>
+        <div class="flex iContainer">
+            <div class="first-icon debug"></div>
+            <div class="first-icon debug"></div>
+            <div class="first-icon debug"></div>
+            <div class="first-icon debug"></div>
+            <div class="first-icon debug"></div>
+        </div>
+        <div class="flex iContainer">
+            <div class="first-icon debug"></div>
+            <div class="first-icon debug"></div>
+        </div>
     </footer>
 </body>
 
