feat: add icons

--- a/index.html
+++ b/index.html
@@ -264,19 +264,51 @@
     </main>
     <footer class="fixed flex">
         <div class="flex iContainer">
-            <div class="first-icon debug"></div>
-            <div class="first-icon debug"></div>
+            <div class="flex icon">
+                <i class="fa-solid fa-microphone"></i>
+                <span>Mute</span>
+            </div>
+            <div class="flex icon">
+                <i class="fa-solid fa-video"></i>
+                <span>Stop Video</span>
+            </div>
         </div>
         <div class="flex iContainer">
-            <div class="first-icon debug"></div>
-            <div class="first-icon debug"></div>
-            <div class="first-icon debug"></div>
-            <div class="first-icon debug"></div>
-            <div class="first-icon debug"></div>
+            <div class="flex icon">
+                <i class="fa-solid fa-user-plus"></i>
+                <span>Invite</span>
+            </div>
+            <div class="flex icon">
+                <i class="fa-solid fa-user-group"></i>
+                <span>Manage participants</span>
+            </div>
+            <div class="flex icon">
+                <i class="fa-solid fa-square-poll-vertical"></i>
+                <span>Polling</span>
+            </div>
+            <div class="flex icon">
+                <i class="fa-solid fa-share-from-square green"></i>
+                <span>Share Screen</span>
+            </div>
+            <div class="flex icon">
+                <i class="fa-regular fa-comment"></i>
+                <span>Chat</span>
+            </div>
+            <div class="flex icon">
+                <i class="fa-solid fa-record-vinyl"></i>
+                <span>Record</span>
+            </div>
+            <div class="flex icon">
+                <i class="fa-solid fa-square"></i>
+                <span>Breakout Rooms</span>
+            </div>
+            <div class="flex icon">
+                <i class="fa-solid fa-ellipsis"></i>
+                <span>More</span>
+            </div>
         </div>
         <div class="flex iContainer">
-            <div class="first-icon debug"></div>
-            <div class="first-icon debug"></div>
+            <button>End Meeting</button>
         </div>
     </footer>
 </body>
