--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 </head>
 
 <body>
-    <main class="main-block">
+    <header class="header-block">
         <span class="speaker1"> <i class="fa-solid fa-square"></i>Speaker View</span>
         <span class="speaker2"><i class="fa-solid fa-square"></i></span>
+    </header>
+    <main class="main-block">
             <div class="container">
                 <div class="card">
                     <img src="https://picsum.photos/250/200" alt="foto random">
